--- a/index.html
+++ b/index.html
@@ -77,6 +77,79 @@
       bottom: 0;
       width: 100%;
     }
+
+    .chatbot-container {
+      width: 380px;
+      height: 750px;
+      background-color: white;
+      border-radius: 15px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      position: fixed;
+      right: 45px;
+      bottom: 20px;
+      overflow: hidden;
+    }
+    .chat-header {
+      background-color: #0072ff;
+      color: #fff;
+      padding: 15px;
+      text-align: center;
+      font-weight: bold;
+      font-size: 18px;
+      border-bottom: 2px solid #005bbb;
+    }
+    .chat-content {
+      height: calc(100% - 50px);
+      overflow: hidden;
+    }
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+    .chat-footer {
+      position: absolute;
+      bottom: 10px;
+      left: 0;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      padding: 10px;
+      background-color: #fff;
+      border-top: 1px solid #ddd;
+    }
+    .chat-button {
+      background-color: #0072ff;
+      color: #fff;
+      padding: 10px;
+      border-radius: 8px;
+      border: none;
+      cursor: pointer;
+      font-weight: bold;
+      transition: 0.3s ease;
+    }
+    .chat-button:hover {
+      background-color: #899bb2;
+    }
+    .chat-icon {
+      position: fixed;
+      bottom: 7px;
+      right: 7px;
+      background-color: #9fa1a3;
+      color: #fff;
+      border-radius: 50%;
+      padding: 15px;
+      cursor: pointer;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      transition: transform 0.3s ease;
+    }
+    .chat-icon:hover {
+      transform: scale(1.1);
+    }
+    .chat-icon svg {
+      fill: white;
+    }
+
   </style>
 </head>
 <body>
@@ -158,7 +231,7 @@
 
 </div>
 
-<Footer><h3>Zoo Tickets Made Easy: Chat with Us</h3></Footer> 
+
 <!--<footer>--> 
   <!--<p>&copy; 2024 City Zoo. All Rights Reserved.</p>
 </footer>
