--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Biltmore Zoo</title>
+  <title> Zoo Safari</title>
   <style>
     /* General styling for the website */
     body {
@@ -155,7 +155,7 @@
 <body>
 
 <header>
-  <h1>Welcome to the Biltmore Zoo</h1>
+  <h1>Welcome to the Zoo Safari</h1>
   <p>Explore the wonders of wildlife</p>
 </header>
 
